--- a/package.json
+++ b/package.json
@@ -7,20 +7,16 @@
     "build": "webpack --config ./build/webpack.prod.conf.js --colors",
     "dev": "node build/dev-server.js"
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
-    "element-ui": "^1.3.7",
-    "vue": "^2.0.0",
-    "superagent": "^3.5.1",
-    "babel-core": "^6.11.4",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.23.1",
+    "element-ui": "^2.4.6",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -29,6 +25,8 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "opn": "^4.0.2",
+    "superagent": "^3.5.1",
+    "vue": "^2.5.17",
     "vue-hot-reload-api": "^2.0.5",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
