--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "main": "./lib/vue-layer.umd.min.js",
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "element-ui": "^2.10.1",
     "core-js": "^2.6.5",
