--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-layer",
-  "version": "0.9.16-beta",
+  "version": "1.0.0",
   "description": "vue layer component",
   "private": false,
   "scripts": {
