--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-layer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "vue layer component",
   "private": false,
   "scripts": {
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "main": "./lib/vue-layer.umd.min.js",
-  "dependencies": {},
+  "dependencies": {
+    "css-loader": "^3.1.0"
+  },
   "devDependencies": {
     "element-ui": "^2.10.1",
     "core-js": "^2.6.5",
