--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "main": "./lib/vue-layer.umd.min.js",
   "dependencies": {
-    "css-loader": "^3.2.0"
+
   },
   "devDependencies": {
     "element-ui": "^2.12.0",
@@ -25,7 +25,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.5.1",
     "eslint-plugin-vue": "^5.2.3",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "css-loader": "^3.2.0"
   },
   "eslintConfig": {
     "root": true,
